--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwind-merge": "2.2.1",
     "@radix-ui/react-tooltip": "1.0.7",
     "uuid": "^13.0.0",
+    "@tanstack/react-table": "8.13.2",
     "@google/genai": "^1.33.0"
   },
   "devDependencies": {
