feat: Add virtual scrolling and geocoding capabilities
Introduces react-window and react-virtualized-auto-sizer for efficient rendering of large lists, particularly in the ConsignmentMap component. This enhances performance by only rendering visible items.

Additionally, integrates geocoding functionality by adding a `coordinates` field to the `Vehicle` type and implementing a utility function for address-to-coordinate conversion. This lays the groundwork for displaying vehicle locations more accurately on the map and enabling distance calculations.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@radix-ui/react-tooltip": "1.0.7",
     "uuid": "^13.0.0",
     "@tanstack/react-table": "8.13.2",
-    "@google/genai": "^1.33.0"
+    "@google/genai": "^1.33.0",
+    "react-window": "1.8.10",
+    "react-virtualized-auto-sizer": "1.0.24"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
